chore: include module3 simulation backend/frontend updates

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,11 @@
     <title>SaaS Impacto Portuário</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div style="padding: 20px; font-family: Arial, sans-serif; color: #334155;">
+        Carregando aplicativo...
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
